--- a/TravelTogether/TravelTogether.csproj
+++ b/TravelTogether/TravelTogether.csproj
@@ -15,6 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.6" PrivateAssets="All" />
+    <PackageReference Include="Semantic-UI-2.0" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
