--- a/TravelTogether/appsettings.json
+++ b/TravelTogether/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-TH3B8Q6\\MARTOXDSQL;Database=TravelTogether;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DEVPC-100;Database=TravelTogether;Trusted_Connection=True;MultipleActiveResultSets=true;User Id=martoXD;Password=hacker123"
   },
   "Logging": {
     "LogLevel": {
